New test with heroku

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Mind the door",
+  "name": "mindthedoor",
   "version": "0.0.0",
   "description": "This is a very cool app!",
   "main": "app.js",
